style.css
@font-face {
    font-family: 'Josefin Sans';
    src: url('fonts/JosefinSans-Regular.woff') format('woff'), 
    url('fonts/JosefinSans-Regular.woff2') format('woff2');
    font-weight: normal;
    font-style: normal;
}

* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

body {
    font-family: 'Josefin Sans', sans-serif;
    color: #dafbe5; 
    margin: 0;
    background-color: rgb(25, 25, 25);
}

.form-container {
    background-color: #252627;
    display: flex;
    justify-content: center;
}

.background-image-container {
    position: relative;
}

.background-image {
    height: 100vh;
}

.image-credit {
    font-size: 13px;
    position: absolute;
    top: 615px;
    left: 27%;
}

.sign-up-form {
    display: flex;
    flex-direction: column;
}

.intro, .button-container {
    margin-left: 50px;
}

.intro {
    padding: 50px 50px 40px 0;
    font-weight: 700;
    display: flex;
    flex-direction: column;
    gap: 40px;
}

.form-controls {
    padding: 20px 0 20px 50px;
    margin-bottom: 40px;
    background-color: #313335;
    box-shadow: 0 5px 10px rgba(0, 0, 0, .1);
    display: flex;
    flex-direction: column;
    gap: 20px;
}

.form-row {
    display: flex;
    gap: 75px
}

.input-container {
    width: 270px;
    display: flex;
    flex-direction: column;
    gap: 5px;
}

.input-container label {
    font-size: 10px;
}

.input-container input {
    height: 30px;
    padding: 7px;
    border: 2px solid #dafbe5;
    border-radius: 8px;
    font-family: inherit;
    font-size: 14px;
}

.input-container input:focus {
    outline: 2px solid black;
    box-shadow: 5px 5px 5px rgba(0, 0, 0, .2);
}

#confirm-password.not-matching {
    outline: solid 2px #FB3640;
}

#confirm-password + span {
    position: relative;
}

#confirm-password.not-matching + span::after {
    position: absolute;
    font-size: 9px;
    font-weight: 700;
    content: 'PASSWORDS DO NOT MATCH';
    padding: 2px 6px;
    color: #dafbe5;
    background-color: #FB3640;
    left: 125px;
    bottom: 40px
}

.button-container button[type="submit"] {
    width: 175px;
    height: 50px;
    border: none;
    border-radius: 15px;
    margin-bottom: 20px;
    font-family: inherit;
    font-size: 15px;
    font-weight: 700;
    background-color: #8338ec;
    color: #dafbe5;
    box-shadow: 5px 5px 10px 5px rgba(0, 0, 0, .1);
    cursor: pointer;
}

.button-container button[type="submit"]:hover {
    background-color: #7f32ec;
}

.button-container button[type="submit"]:active {
    background-color: #741fea;
}

a {
    text-decoration: none;
    color: #8338ec;
}

